# DeployBot

./: .gitignore  .mergequeue.example.toml  AGENTS.md  LICENSE  README.md  action.yml  pyproject.toml
.github/workflows/: ci.yml
adapters/claude-code/: .mcp.json
adapters/claude-code/.claude-plugin/: plugin.json
adapters/claude-code/skills/deploybot/: SKILL.md
adapters/claude-code/skills/manage-merge-queue/: SKILL.md
adapters/codex/agent-merge-queue/: .mcp.json
adapters/codex/agent-merge-queue/.codex-plugin/: plugin.json
adapters/codex/agent-merge-queue/skills/deploybot/: SKILL.md
adapters/codex/agent-merge-queue/skills/deploybot/agents/: openai.yaml
adapters/codex/agent-merge-queue/skills/manage-merge-queue/: SKILL.md
adapters/codex/agent-merge-queue/skills/manage-merge-queue/agents/: openai.yaml
adapters/cursor/: AGENTS.md
adapters/cursor/.cursor/: mcp.astro.json  mcp.json
adapters/cursor/.cursor/rules/: deploybot.mdc  manage-merge-queue.mdc
docs/: reference.md
examples/: github-workflow.yml
skills/deploybot/: SKILL.md
skills/deploybot/agents/: openai.yaml
skills/manage-merge-queue/: SKILL.md
skills/manage-merge-queue/agents/: openai.yaml
src/agent_merge_queue/: __init__.py  cli.py  config.py  doctor.py  mcp_server.py  pipeline.py  records.py  reviews.py
tests/: test_cli.py  test_config.py  test_docs.py  test_doctor.py  test_mcp.py  test_pipeline.py  test_records.py  test_reviews.py  test_skill.py
